[package]
name = "gmail"
edition = "2021"
version = "0.18.0"
description = "A fluent library for the Gmail API, based on OpenAPI spec"
homepage = "https://github.com/libninjacom/gmail-rs"
documentation = "https://docs.rs/gmail"
readme = "README.md"
license = "MIT"
repository = "https://github.com/libninjacom/gmail-rs"

[workspace]
members = [".", "transform"]

[lib]
doctest = false
required-features = []

[dependencies]
base64 = "0.22.1"
futures = "0.3.25"
http = "1.1.0"
httpclient = { version = "0.26.0", features = ["oauth2"]}
serde_json = "1.0.81"
serde = { version = "1.0.219" , features = ["derive"]}

[dev-dependencies]
tokio = { version = "1.45.1" , features = ["full"]}
